Editing the nav
Again, the title says it all.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         
         <div id="nav-container">
             <div class="nav-box">
-                <p>This is some nav text.</p>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><hr></li>
+                    <li><a href="blog.html">Blog</a></li>
+                </ul>
             </div>
         </div>
     
