--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id="nav-container">
             <div class="nav-box">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><hr></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="#">Front Door</a></li>
+                    <li><hr><hr></li>
+                    <li><a href="blog.html">Back Door</a></li>
                 </ul>
             </div>
         </div>
